# bigdata_talent_kg

./: .gitignore  AGENTS.md  README.md  graph.html  main.py  pyproject.toml
app/: main_app.py
data/: cleaned_jobs.jsonl  extracted_knowledge.jsonl  zhaopin_jobs.csv
extraction/: batch_extract.py  prompt_builder.py  schema.py
knowledge/: neo4j_importer.py
scraper/: clean_data.py  job_sites_scraper.py
